--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
-          <i class="fa fa-phone fa-3x sr-contact"></i>
+          <i class="fa fa-phone fa-3x  text-primary sr-contact"></i>
           <p>(11) 2645-3302</p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+          <i class="fa fa-envelope-o text-primary fa-3x sr-contact"></i>
           <p>
             <a href="mailto:contato@nicomedes.adv.br">contato@nicomedes.adv.br</a>
           </p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-map-marker fa-3x sr-contact"></i>
+          <i class="fa fa-map-marker  text-primary fa-3x sr-contact"></i>
           <p>
             Rua Fontoura Xavier, 1157, <br/> sala 11, <span class="text-primary"> 2º andar</span>
             <br/> CEP 08295-300<br/> Itaquera, São Paulo
